<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">深度搜索</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- common -->
    <string name="net_status_error">网络连接异常</string>
    <string name="loading">加载中...</string>
    <string name="cancel">取消</string>
    <string name="affirm">确认</string>
    <string name="affirm_to_delete">是否删除?</string>
    <string name="search_bar_input_hint">请输入关键字</string>
    <string name="please_input_the_target_url">请输入目标地址</string>

    <!-- main activity -->
    <string name="personal_record">个人收藏</string>
    <string name="union_search">综合搜索</string>
    <string name="multirow_search">分栏搜索</string>
    <string name="monitor_search">监视搜索</string>
    <string name="two_dimension_scanner">扫一扫</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="title_activity_result_detail">搜索结果详情</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_capture">扫一扫</string>
    <string name="title_activity_help">帮助</string>
    <string name="input_keyword_hint">请输入关键字并搜索</string>
    <string name="search_list_empty">搜索结果为空</string>
    <string name="ban_word_hint">敏感词，禁止搜索</string>

    <!-- union search fragment -->
    <string name="submit_task_success">任务提交成功</string>
    <string name="submit_task_fail">任务提交失败</string>
    <string name="select_web_group">提交失败，请设置浏览器组</string>
    <string name="search_finish_notify">搜索完成</string>

    <!-- monitor search fragment -->
    <string name="find_new_notice">发现新的消息</string>
    <string name="task_exists">任务已经存在</string>

    <!-- setting activity -->
    <string name="load_way_">搜索结果加载方式:</string>
    <string name="webview_load">应用内加载</string>
    <string name="browser_load">浏览器加载</string>
    <string name="web_groups">网站分组</string>
    <string name="add_new_group">添加分组</string>
    <string name="notice_type_">消息栏通知:</string>
    <string name="notice_open">打开</string>
    <string name="notice_close">关闭</string>

    <!-- help activity -->
    <string name="app_version">深度搜索 2.0版</string>
    <string name="use_title">使用说明</string>
    <string name="use_content">一、在首页点击标题栏的搜索图标，输入关键字，然后点搜索按钮或者回车键就可以进行搜索。\n\n二、在设置页面选择在APP内显示结果还是跳转到浏览器显示。\n\n三、欢迎访问网页端http://www.musksearch.me:8089</string>
    <string name="my_title">作者留言</string>
    <string name="my_content">这个APP主要用于在互联网上快速搜索知识，现在可以搜索的网站有：百度、知乎、好搜和维基百科。它优点在于：\n1、去除没用信息，节省流量。\n2、同时在多个网站进行搜索，方便快捷。\n当然以后还会加入更多的网站，敬请期待！\n\n感谢大家的使用!\n\nMusketeer.</string>

    <!-- personal record fragment -->
    <string name="title_personal_record">个人收藏</string>
    <string name="directinary">目录</string>
    <string name="create_new_folder">新建文件夹</string>

    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
</resources>
